Support for non ISO complaiant URLs